--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,30 @@
 /*Theme*/
 
 .primary {
-    background-color: rgb(0, 34, 72);
+    background-color: #002248;
+    color: #ffffff;
 }
 
 .secondary {
-    background-color: rgb(243, 194, 16);
+    background-color: #81D4FA;
+    color: #000000;
 }
 
 .text-secondary {
-    color: rgb(243, 194, 16);
+    color: #81D4FA;
 }
 
 .btn.secondary {
     font-weight: 500;
+}
+
+.primary-hover:hover {
+    background-color: #002248;
+    color: #ffffff;
+}
+
+.text-secondary-hover:hover {
+    color: #81D4FA !important;
 }
 
 
@@ -46,8 +57,16 @@
     padding-top: .5em;
 }
 
+.mt-1 {
+    margin-top: .5em;
+}
+
 .mt-2 {
     margin-top: 1em;
+}
+
+.mb-2 {
+    margin-bottom: 1em;
 }
 
 .my-2 {
@@ -67,6 +86,16 @@
 
 .m-4 {
     margin: 2em;
+}
+
+.px-1 {
+    padding-left: .5em;
+    padding-right: .5em;
+}
+
+.px-2 {
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .px-4 {
@@ -96,9 +125,14 @@
     font-size: larger;
 }
 
+#nav .nav-contact .material-icons {
+    bottom: -4px;
+    position: relative;
+}
+
 #nav .nav-wrapper .input-field {
-    border: 2px solid rgb(243, 194, 16) !important;
-    padding: 10px;
+    border: 2px solid #81D4FA !important;
+    padding: 7px;
 }
 
 #nav .nav-wrapper .input-field input {
@@ -115,6 +149,20 @@
 
 nav .nav-wrapper a {
     font-size: 18px;
+    border: 1px solid #002248;
+    height: 64px;
+}
+
+nav .nav-wrapper .active a,
+nav .nav-wrapper a:hover {
+    background-color: white;
+    color: #002248;
+    font-weight: bold;
+}
+
+.sidenav-trigger {
+    top: -12px;
+    position: relative;
 }
 
 .logo {
@@ -128,25 +176,75 @@ nav .nav-wrapper a {
     background-position: center;
 }
 
+#about-banner {
+    height: 600px;
+    background-image: url("../images/about-us.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+#product-carousel {
+    position: relative;
+}
+
+#product-carousel #back,
+#product-carousel #forward {
+    z-index: 10;
+    position: absolute;
+    background-color: #ffffffcc;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    top: 50px;
+    cursor: pointer;
+}
+
+#product-carousel #back {
+    left: 40px;
+}
+
+#product-carousel #forward {
+    right: 40px;
+}
+
+#product-carousel a .material-icons {
+    font-size: 80px;
+}
+
 #product-carousel .card img {
     width: 100%;
-    height: 240px;
+    height: 200px;
     object-fit: contain;
 }
 
-#product-carousel .row {
+#product-carousel .carousel {
     position: relative;
-    top: -80px;
+    top: -100px;
 }
 
-.square {
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%;
-    background-image: url("../images/workstation.png");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+#product-carousel .carousel-item {
+    opacity: 1 !important;
+    width: 20%;
+    height: 400px;
+}
+
+.brief-about {
+    font-size: 18px;
+}
+
+#contact .card.horizontal {
+    box-shadow: none;
+}
+
+#contact .card-image img {
+    width: 120px;
+    height: 100px;
+    object-fit: contain;
+    padding: 1rem;
+}
+
+#contact .horizontal .card-content {
+    font-size: 18px;
 }
 
 #stats {
@@ -164,7 +262,7 @@ nav .nav-wrapper a {
 }
 
 #testimonial .card {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 #testimonial .card span {
@@ -176,7 +274,7 @@ nav .nav-wrapper a {
     left: 0px;
 }
 
-#testimonial .card .yellow {
+#testimonial .card .yb {
     height: 60px;
     margin: -2em;
 }
@@ -200,7 +298,7 @@ nav .nav-wrapper a {
     max-width: 200px;
     width: 100%;
     object-fit: contain;
-    height: 200px;
+    height: 120px;
 }
 
 footer p {
@@ -209,10 +307,10 @@ footer p {
 
 footer #subscription-form .input-field {
     background-color: rgba(255, 255, 255, 0.3);
-    padding-left: 1em;
 }
 
 footer #subscription-form .input-field input {
+    padding-left: 1em;
     margin: 0px !important;
     border: none !important;
 }
@@ -221,24 +319,9 @@ footer #subscription-form .btn {
     height: 3rem;
 }
 
-@media only screen and (max-width: 600px) {
-    .logo-holder {
-        text-align: center;
-        width: 100%;
-    }
-    .logo-holder .logo {
-        text-align: center;
-    }
-}
-
 @media only screen and (max-width: 992px) {
-    .logo-holder {
-        text-align: center;
+    #product-carousel .carousel-item {
         width: 100%;
-    }
-    .logo-holder .logo {
-        text-align: center;
-        display: block;
     }
     #nav .nav-wrapper {
         float: right;
@@ -253,6 +336,11 @@ footer #subscription-form .btn {
 
 
 /*Overrides*/
+
+.btn {
+    border-radius: 0px;
+    box-shadow: none;
+}
 
 @media only screen and (min-width: 993px) {
     .container {
